feat: Add Documentation tab and improve print styles
Introduces a new 'Documentation' tab accessible via navigation. This tab provides a user guide and explanation of the calculator's features.

Additionally, enhances the print stylesheet to ensure the calculator renders cleanly and legibly when printed to paper, by adjusting margins, element visibility, and color properties. This includes making backgrounds white, removing headers/footers, and ensuring text is black.

--- a/index.html
+++ b/index.html
@@ -15,27 +15,40 @@
       ::-webkit-scrollbar-thumb:hover { background: #3b82f6; }
 
       @media print {
-        body { background-color: white; }
+        @page { margin: 1.5cm; size: auto; }
+        html, body {
+          height: auto !important;
+          overflow: visible !important;
+          background-color: white !important;
+          print-color-adjust: exact;
+          -webkit-print-color-adjust: exact;
+        }
         .no-print { display: none !important; }
-        .shadow-xl, .shadow-lg, .shadow-2xl { box-shadow: none !important; }
+        .shadow-xl, .shadow-lg, .shadow-2xl, .shadow-sm { box-shadow: none !important; }
         .bg-gradient-to-r, .bg-gradient-to-br { background: none !important; border: 1px solid #ddd; }
         .text-white { color: black !important; }
         .bg-slate-900 { background-color: white !important; color: black !important; border: 1px solid #ccc; }
-        header, footer { display: none; }
-        #root { margin: 0; padding: 0; }
-        .print-break-inside { break-inside: avoid; }
+        header, footer { display: none !important; }
+        #root { margin: 0; padding: 0; width: 100%; }
+        .print-break-inside { break-inside: avoid; page-break-inside: avoid; }
+        
+        /* Ensure specific elements are visible and styled for paper */
+        h1, h2, h3, h4, p, span, div { color: #000; }
+        .bg-blue-600 { background-color: #2563eb !important; color: white !important; }
       }
     </style>
   <script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.0/client",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0",
-    "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0"
+    "date-fns": "https://aistudiocdn.com/date-fns@^4.1.0",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
